[gd_scene load_steps=15 format=2]

[ext_resource path="res://Game Modes/PvP.gd" type="Script" id=1]
[ext_resource path="res://Audio/zap1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Audio/zap2.ogg" type="AudioStream" id=3]
[ext_resource path="res://User Interface/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Backgrounds/blue.png" type="Texture" id=5]
[ext_resource path="res://Stuff/Wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/Player/Player1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/Player 2/Player2.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="PvP" type="Node2D"]
script = ExtResource( 1 )

[node name="P1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="P2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="P1Win" type="CanvasLayer" parent="."]

[node name="P1Win" type="Control" parent="P1Win"]
editor/display_folded = true
visible = false
modulate = Color( 0, 0.858824, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="P1Win/P1Win"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="P1Win/P1Win/CenterContainer"]
margin_left = 437.0
margin_top = 263.0
margin_right = 587.0
margin_bottom = 337.0

[node name="Title" type="Label" parent="P1Win/P1Win/CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 18.0
text = "Player 1 Wins!"
align = 1

[node name="Retry" type="Button" parent="P1Win/P1Win/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 46.0
text = "Retry"

[node name="Quit" type="Button" parent="P1Win/P1Win/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 150.0
margin_bottom = 74.0
text = "Quit"

[node name="P2Win" type="CanvasLayer" parent="."]

[node name="P2Win" type="Control" parent="P2Win"]
editor/display_folded = true
visible = false
modulate = Color( 0, 0.858824, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="P2Win/P2Win"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="P2Win/P2Win/CenterContainer"]
margin_left = 434.0
margin_top = 263.0
margin_right = 590.0
margin_bottom = 337.0

[node name="Title" type="Label" parent="P2Win/P2Win/CenterContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 18.0
text = "Player 2 Wins!"
align = 1

[node name="Retry2" type="Button" parent="P2Win/P2Win/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 156.0
margin_bottom = 46.0
text = "Retry"

[node name="Quit2" type="Button" parent="P2Win/P2Win/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 156.0
margin_bottom = 74.0
text = "Quit"

[node name="Draw" type="CanvasLayer" parent="."]

[node name="Draw" type="Control" parent="Draw"]
editor/display_folded = true
visible = false
modulate = Color( 0, 0.858824, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="Draw/Draw"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Draw/Draw/CenterContainer"]
margin_left = 473.0
margin_top = 263.0
margin_right = 550.0
margin_bottom = 337.0

[node name="Title" type="Label" parent="Draw/Draw/CenterContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 18.0
text = "Draw!"
align = 1

[node name="Retry3" type="Button" parent="Draw/Draw/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 77.0
margin_bottom = 46.0
text = "Retry"

[node name="Quit3" type="Button" parent="Draw/Draw/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 77.0
margin_bottom = 74.0
text = "Quit"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="1" type="Sprite" parent="ParallaxBackground/Background"]
texture = ExtResource( 5 )
centered = false

[node name="2" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 256, 0 )
texture = ExtResource( 5 )
centered = false

[node name="3" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 512, 0 )
texture = ExtResource( 5 )
centered = false

[node name="4" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 768, 0 )
texture = ExtResource( 5 )
centered = false

[node name="5" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 768, 256 )
texture = ExtResource( 5 )
centered = false

[node name="6" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 512, 256 )
texture = ExtResource( 5 )
centered = false

[node name="7" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 256, 256 )
texture = ExtResource( 5 )
centered = false

[node name="8" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 0, 256 )
texture = ExtResource( 5 )
centered = false

[node name="9" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 0, 512 )
texture = ExtResource( 5 )
centered = false

[node name="10" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 256, 512 )
texture = ExtResource( 5 )
centered = false

[node name="11" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 512, 512 )
texture = ExtResource( 5 )
centered = false

[node name="12" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 768, 512 )
texture = ExtResource( 5 )
centered = false

[node name="Walls" type="Node2D" parent="."]
editor/display_folded = true

[node name="1" parent="Walls" instance=ExtResource( 6 )]
position = Vector2( -32, 304 )

[node name="2" parent="Walls" instance=ExtResource( 6 )]
position = Vector2( 1056, 288 )

[node name="Players" type="Node2D" parent="."]

[node name="Player1" parent="Players" instance=ExtResource( 7 )]
position = Vector2( 512, 528 )

[node name="Player2" parent="Players" instance=ExtResource( 8 )]
position = Vector2( 512, 64 )

[connection signal="pressed" from="P1Win/P1Win/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="P1Win/P1Win/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="P2Win/P2Win/CenterContainer/VBoxContainer/Retry2" to="." method="_on_Retry2_pressed"]
[connection signal="pressed" from="P2Win/P2Win/CenterContainer/VBoxContainer/Quit2" to="." method="_on_Quit2_pressed"]
[connection signal="pressed" from="Draw/Draw/CenterContainer/VBoxContainer/Retry3" to="." method="_on_Retry3_pressed"]
[connection signal="pressed" from="Draw/Draw/CenterContainer/VBoxContainer/Quit3" to="." method="_on_Quit3_pressed"]
[connection signal="tree_exited" from="Players/Player1" to="." method="_on_Player1_tree_exited"]
[connection signal="tree_exited" from="Players/Player2" to="." method="_on_Player2_tree_exited"]
